test/failing/cycle1.trunnel


struct x {
  struct x z;
}
